Agregados nuevos datos y se actualiza parte estructural del codigo en Program.cs.

--- a/cajeroAutomatico.csproj
+++ b/cajeroAutomatico.csproj
@@ -14,6 +14,6 @@ Actualizado el proyecto para usar .NET 6.0 y renombrada la rama master a main."
 
 Añadidas instrucciones para ejecutar la aplicación: 
 1) Construir el proyecto con 'dotnet build cajeroautomatico.csproj', 
-2) Ejecutar la aplicación con 'dotnet run --project cajeroautomatico.csproj'. 
+2) Ejecutar la aplicación con 'dotnet run "2guionesmedio"project cajeroautomatico.csproj'. 
 Incluidas también advertencias sobre la necesidad de tener el runtime de .NET 6.0 instalado."
 -->
